--- a/css/styles.css
+++ b/css/styles.css
@@ -22,6 +22,8 @@ body {
     margin-left: auto;
     margin-right: auto;
     width: 1440px;
+    padding-left: 156px;
+    padding-right: 156px;
 }
 
 .logo {
@@ -198,6 +200,10 @@ body {
     width: 264px;
 }
 
+.portfolio-buttons-list {
+    margin-bottom: 72px;
+}
+
 .portfolio-button {
     font-family: 'Roboto', sans-serif;
     font-weight: 600;
@@ -208,6 +214,12 @@ body {
     color: var(--iris);
     background: var(--cloud);
     cursor: pointer;
+
+    border-radius: 4px;
+    padding: 12px 24px;
+    min-width: 69px;
+    text-align: center;
+    border: none;
 }
 
 .portfolio-button:hover, .portfolio-button:focus {
