--- a/css/styles.css
+++ b/css/styles.css
@@ -19,20 +19,23 @@ body {
 }
 
 /* ----------Утиліти---------- */
-
-.no-point {
+ul {
     padding: 0;
     margin: 0;
-
     list-style: none;
+}
+
+h1, h2, h3, p {
+    padding: 0;
+    margin: 0;
 }
 
 .container {
     margin-left: auto;
     margin-right: auto;
-    width: 1440px;
-    padding-left: 156px;
-    padding-right: 156px;
+    width: 1158px;
+    padding-left: 15px;
+    padding-right: 15px;
 }
 
 .head-nav {
@@ -57,6 +60,11 @@ body {
     text-transform: uppercase;
     color: var(--iris);
     text-decoration: none;
+}
+
+footer .logo {
+    padding: 0;
+    padding-bottom: 16px;
 }
 
 .head-logo {
@@ -127,12 +135,14 @@ body {
 .head {
     background-color: var(--navy-blue);
     text-align: center;
+    padding-top: 192px;
+    padding-bottom: 192px;
 }
 
 .first-header {
-    margin-top: 0;
+    /* margin-top: 0;
     margin-bottom: 48px;
-    padding-top: 192px;
+    padding-top: 192px; */
 
     font-weight: 600;
     font-size: 56px;
@@ -145,10 +155,8 @@ body {
 .order-button {
     border-radius: 4px;
     padding: 16px 32px;
-    min-width: 170px;
     text-align: center;
     border: none;
-    margin-bottom: 192px;
 
     font-family: 'Roboto', sans-serif;
     background: var(--iris);
@@ -166,11 +174,13 @@ body {
 
 /* ----------Main Features---------- */
 
+.features {    
+    padding-top: 120px;
+    padding-bottom: 120px;
+}
+
 .features-list {
     display: flex;
-
-    padding-top: 120px;
-    margin-bottom: 120px;
 }
 
 .features-list-item + .features-list-item {
@@ -188,8 +198,6 @@ body {
 }
 
 .text {
-    margin-top: 0;
-
     font-size: 16px;
     line-height: 1.5;
     letter-spacing: 0.02em;
@@ -198,8 +206,11 @@ body {
 
 /* ----------Main Work---------- */
 
+.work {
+    padding-bottom: 120px;
+}
+
 .work-second-header {
-    margin-top: 0;
     margin-bottom: 72px;
 
     font-size: 36px;
@@ -211,7 +222,6 @@ body {
 
 .work-list {
     display: flex;
-    margin-bottom: 120px;
 }
 
 .work-list-item + .work-list-item {
@@ -223,10 +233,10 @@ body {
 .team {
     background-color: var(--cloud);
     padding-top: 120px;
+    padding-bottom: 120px;
 }
 
 .team-second-header {
-    margin-top: 0;
     margin-bottom: 72px;
 
     font-size: 36px;
@@ -238,7 +248,6 @@ body {
 
 .team-list {
     display: flex;
-    padding-bottom: 120px;
 }
 
 .team-box + .team-box {
@@ -251,6 +260,10 @@ body {
 }
 
 .work-image {
+    margin-bottom: 32px;
+}
+
+.team-box .text {
     margin-bottom: 32px;
 }
 
