--- a/css/styles.css
+++ b/css/styles.css
@@ -260,6 +260,7 @@ footer .logo {
 }
 
 .work-image {
+    display: block;
     margin-bottom: 32px;
 }
 
@@ -291,6 +292,7 @@ footer .logo {
 
 .portfolio {
     padding-top: 96px;
+    padding-bottom: 120px;
 }
 
 .buttons-list {
@@ -350,7 +352,17 @@ footer .logo {
     margin-bottom: 0;
 }
 
-.cards-list-item h3 {
+.cards-list-text {
+    padding: 32px 16px;
+    border: 0.5px solid #F4F4FD;
+    border-top: 0;
+}
+
+.cards-list-image {
+    display: block;
+}
+
+/* .cards-list-item h3 {
     margin-top: 32px;
     margin-left: 16px;
 }
@@ -358,7 +370,7 @@ footer .logo {
 .cards-list-item p {
     margin-left: 16px;
     margin-bottom: 32px;
-}
+} */
 
 /* ----------Also---------- */
 
