--- a/css/styles.css
+++ b/css/styles.css
@@ -31,8 +31,7 @@ h1, h2, h3, p {
 }
 
 .container {
-    margin-left: auto;
-    margin-right: auto;
+    margin: 0 auto;
     width: 1158px;
     padding-left: 15px;
     padding-right: 15px;
