--- a/css/styles.css
+++ b/css/styles.css
@@ -30,6 +30,10 @@ h1, h2, h3, p {
     margin: 0;
 }
 
+.header {
+    box-shadow: 0px 2px 1px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16), 0px 1px 6px rgba(46, 47, 66, 0.08);
+}
+
 .container {
     margin: 0 auto;
     width: 1158px;
@@ -39,8 +43,6 @@ h1, h2, h3, p {
 
 .head-nav {
     display: flex;
-    align-items: center;
-    box-shadow: 0px 2px 1px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16), 0px 1px 6px rgba(46, 47, 66, 0.08);
 }
 
 /* ----------Header---------- */
@@ -63,7 +65,7 @@ h1, h2, h3, p {
 
 footer .logo {
     padding: 0;
-    padding-bottom: 16px;
+    margin-bottom: 16px;
 }
 
 .head-logo {
@@ -139,9 +141,7 @@ footer .logo {
 }
 
 .first-header {
-    /* margin-top: 0;
     margin-bottom: 48px;
-    padding-top: 192px; */
 
     font-weight: 600;
     font-size: 56px;
@@ -182,6 +182,10 @@ footer .logo {
     display: flex;
 }
 
+.features-list-item {
+    flex-basis: calc(100% - (3 * 24px) / 4);
+}
+
 .features-list-item + .features-list-item {
     margin-left: 24px;
 }
@@ -219,6 +223,10 @@ footer .logo {
     text-transform: capitalize;
 }
 
+.block {
+    display: block;
+}
+
 .work-list {
     display: flex;
 }
@@ -251,6 +259,7 @@ footer .logo {
 
 .team-box + .team-box {
     margin-left: 24px;
+    flex-basis: calc(100% - (3 * 24px) / 4);
 }
 
 .team-box {
@@ -301,8 +310,7 @@ footer .logo {
 }
 
 .button-list-item {
-    border: 0.5px solid #F4F4FD;
-    box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08);
+    
 }
 
 .button-list-item + .button-list-item {
@@ -312,9 +320,6 @@ footer .logo {
 .portfolio-button {
     border-radius: 4px;
     padding: 12px 24px;
-    min-width: 69px;
-    text-align: center;
-    border: none;
 
     font-family: 'Roboto', sans-serif;
     font-weight: 600;
@@ -325,11 +330,14 @@ footer .logo {
     color: var(--iris);
     background: var(--cloud);
     cursor: pointer;
+    border: 0.5px solid #F4F4FD;
+    box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08);
 }
 
 .portfolio-button:hover, .portfolio-button:focus {
     background-color: var(--iris);
     color: var(--background);
+    box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 2px 1px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
 }
 
 .cards-list {
@@ -360,16 +368,6 @@ footer .logo {
 .cards-list-image {
     display: block;
 }
-
-/* .cards-list-item h3 {
-    margin-top: 32px;
-    margin-left: 16px;
-}
-
-.cards-list-item p {
-    margin-left: 16px;
-    margin-bottom: 32px;
-} */
 
 /* ----------Also---------- */
 
