--- a/css/styles.css
+++ b/css/styles.css
@@ -18,20 +18,16 @@ body {
     background-color: var(--background);
 }
 
-/* ----------Утиліти---------- */
-ul {
-    padding: 0;
+h1, h2, h3, ul, p {
     margin: 0;
+    padding: 0;
     list-style: none;
 }
 
-h1, h2, h3, p {
-    padding: 0;
-    margin: 0;
-}
+/* ---------------HEADER--------------- */
 
 .header {
-    box-shadow: 0px 2px 1px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16), 0px 1px 6px rgba(46, 47, 66, 0.08);
+    border-bottom: 1px solid #E7E9FC;
 }
 
 .container {
@@ -41,21 +37,18 @@ h1, h2, h3, p {
     padding-right: 15px;
 }
 
-.head-nav {
+.flex {
     display: flex;
 }
 
-/* ----------Header---------- */
-
 .logo {
-    display: block;
     padding-top: 24px;
     padding-bottom: 24px;
 
     font-family: 'Raleway', sans-serif;
     font-weight: 800;
     font-size: 18px;
-    line-height: 1.3;
+    line-height: 1.33;
     align-items: center;
     letter-spacing: 0.03em;
     text-transform: uppercase;
@@ -63,25 +56,23 @@ h1, h2, h3, p {
     text-decoration: none;
 }
 
-footer .logo {
-    padding: 0;
-    margin-bottom: 16px;
-}
-
-.head-logo {
+.header-logo {
     color: var(--navy-blue);
 }
 
-.nav-list {
-    display: flex;
+.navigation-list {
     margin-left: 76px;
 }
 
-.nav-list .nav-list-item + .nav-list-item {
+.navigation-list .navigation-list-item + .navigation-list-item {
     margin-left: 40px;
 }
 
-.nav-anchor {
+.navigation-list-item {
+    
+}
+
+.navigation-anchor {
     display: block;
     padding-top: 24px;
     padding-bottom: 24px;
@@ -92,9 +83,10 @@ footer .logo {
     letter-spacing: 0.02em;
     text-decoration: none;
     color: var(--navy-blue);
+    text-transform: capitalize;
 }
 
-.nav-anchor:hover, .nav-anchor:focus {
+.navigation-anchor:hover, .navigation-anchor:focus {
     color: var(--iris);
 }
 
@@ -102,11 +94,7 @@ footer .logo {
     margin-left: auto;
 }
 
-.address-list {
-    display: flex;
-}
-
-.address-list .nav-list-item + .nav-list-item {
+.address-list-item + .address-list-item {
     margin-left: 40px;
 }
 
@@ -131,16 +119,18 @@ footer .logo {
     color: var(--iris)
 }
 
-/* ----------Main Head---------- */
+/* ---------------MAIN--------------- */
 
-.head {
+/* ------------Hero------------ */
+
+.hero {
     background-color: var(--navy-blue);
     text-align: center;
     padding-top: 192px;
     padding-bottom: 192px;
 }
 
-.first-header {
+.hero-header {
     margin-bottom: 48px;
 
     font-weight: 600;
@@ -151,8 +141,7 @@ footer .logo {
     color: var(--background);
 }
 
-.order-button {
-    border-radius: 4px;
+.hero-button {
     padding: 16px 32px;
     text-align: center;
     border: none;
@@ -165,21 +154,19 @@ footer .logo {
     letter-spacing: 0.04em;
     color: var(--background);
     cursor: pointer;
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+    border-radius: 4px;
 }
 
-.order-button:hover, .order-button:focus {
+.hero-button:hover, .hero-button:focus {
     background-color: var(--order-hover);
 }
 
-/* ----------Main Features---------- */
+/* ------------Features------------ */
 
-.features {    
+.features {
     padding-top: 120px;
     padding-bottom: 120px;
-}
-
-.features-list {
-    display: flex;
 }
 
 .features-list-item {
@@ -191,13 +178,13 @@ footer .logo {
 }
 
 .third-header {
-    margin-top: 0;
     margin-bottom: 8px;
 
     font-weight: 600;
     font-size: 20px;
     line-height: 1.2;
     letter-spacing: 0.02em;
+    text-transform: capitalize;
 }
 
 .text {
@@ -207,13 +194,13 @@ footer .logo {
     color: var(--slate);
 }
 
-/* ----------Main Work---------- */
+/* ------------Work------------ */
 
 .work {
     padding-bottom: 120px;
 }
 
-.work-second-header {
+.second-header {
     margin-bottom: 72px;
 
     font-size: 36px;
@@ -223,19 +210,19 @@ footer .logo {
     text-transform: capitalize;
 }
 
-.block {
-    display: block;
-}
-
-.work-list {
-    display: flex;
+.work-list-item {
+    flex-basis: calc(100% - (2 * 24px) / 3);
 }
 
 .work-list-item + .work-list-item {
     margin-left: 24px;
 }
 
-/* ----------Main Team---------- */
+.block {
+    display: block;
+}
+
+/* ------------Team------------ */
 
 .team {
     background-color: var(--cloud);
@@ -243,48 +230,44 @@ footer .logo {
     padding-bottom: 120px;
 }
 
-.team-second-header {
-    margin-bottom: 72px;
-
-    font-size: 36px;
-    line-height: 1.11;
-    text-align: center;
-    letter-spacing: 0.02em;
-    text-transform: capitalize;
-}
-
-.team-list {
-    display: flex;
-}
-
-.team-box + .team-box {
+.team-list-item + .team-list-item {
     margin-left: 24px;
+}
+
+.team-list-item {
     flex-basis: calc(100% - (3 * 24px) / 4);
+    background: var(--background);
+    box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
+    border-radius: 0px 0px 4px 4px;
 }
 
 .team-box {
-    background: var(--background);
+    margin: 32px 0;
     text-align: center;
 }
 
-.work-image {
-    display: block;
-    margin-bottom: 32px;
-}
-
-.team-box .text {
-    margin-bottom: 32px;
-}
-
-/* ----------Footer---------- */
-
+/* ------------FOOTER------------ */
 .footer {
     background-color: var(--navy-blue);
     padding-top: 100px;
     padding-bottom: 100px;
 }
 
-.foot-logo {
+.logo-foot {
+    margin-bottom: 16px;
+    font-family: 'Raleway';
+    font-weight: 800;
+    font-size: 18px;
+    line-height: 1.16;
+    display: flex;
+    align-items: center;
+    letter-spacing: 0.03em;
+    text-transform: uppercase;
+    text-decoration: none;
+    color: var(--iris);
+}
+
+.footer-logo {
     color: var(--cloud);
 }
 
@@ -293,10 +276,12 @@ footer .logo {
     line-height: 1.5;
     letter-spacing: 0.02em;
     color: var(--cornflower);
-    width: 264px;
+    max-width: 264px;
 }
 
-/* ----------Portfolio---------- */
+/* ------------PORTFOLIO------------ */
+
+/* ------------Buttons------------ */
 
 .portfolio {
     padding-top: 96px;
@@ -309,11 +294,7 @@ footer .logo {
     justify-content: center;
 }
 
-.button-list-item {
-    
-}
-
-.button-list-item + .button-list-item {
+.buttons-list-item + .buttons-list-item {
     margin-left: 24px;
 }
 
@@ -332,18 +313,22 @@ footer .logo {
     cursor: pointer;
     border: 0.5px solid #F4F4FD;
     box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08);
+    text-transform: capitalize;
 }
 
 .portfolio-button:hover, .portfolio-button:focus {
-    background-color: var(--iris);
     color: var(--background);
+    background-color: var(--order-hover);
     box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 2px 1px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
 }
+
+/* ------------Cards------------ */
 
 .cards-list {
     display: flex;
     flex-wrap: wrap;
 }
+
 .cards-list-item {
     width: calc((100% - 48px) / 3);
     margin-right: 24px;
@@ -359,17 +344,13 @@ footer .logo {
     margin-bottom: 0;
 }
 
-.cards-list-text {
+.cards-box {
     padding: 32px 16px;
     border: 0.5px solid #F4F4FD;
     border-top: 0;
 }
 
-.cards-list-image {
-    display: block;
-}
-
-/* ----------Also---------- */
+/* ------------Visually Hidden------------ */
 
 .visually-hidden {
     position: absolute;
