--- a/css/styles.css
+++ b/css/styles.css
@@ -319,7 +319,7 @@ h1, h2, h3, ul, p {
 .portfolio-button:hover, .portfolio-button:focus {
     color: var(--background);
     background-color: var(--order-hover);
-    box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 2px 1px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
+    /* box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 2px 1px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12); */
 }
 
 /* ------------Cards------------ */
